manifest/jira/work-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: work
  labels:
    name: work-ns
