manifest/jira/deploy-conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: work
  name: confluence-deploy
  labels:
    app: confuence-dev
    company: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      containers:
      - image: atlassian/confluence-server:latest
        name: confluence-img
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "1.5"
            memory: "8000Mi"
          limits:
            cpu: "1.5"
            memory: "8000Mi"
#        livenessProbe:
#          httpGet:
#            port: 8080
#          initialDelaySeconds: 10
#          timeoutSeconds: 10
#          periodSeconds: 100
#          failureThreshold: 3
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: alpha.eksctl.io/nodegroup-name
                operator: In
                values:
                - ng-worker-main
