manifest/jira/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: work
  name: jira-svc
  labels:
    app: jira-dev
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jira.rayhli.com
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-1:264594923212:certificate/44e134d9-bb4c-4dce-918c-f26b0df80521
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  selector:
    app: jira 
  ports:
#  - name: https
#    protocol: TCP
#    port: 443
#    targetPort: http
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  namespace: work
  name: confluence-svc
  labels:
    app: confluence-dev
  annotations:
    external-dns.alpha.kubernetes.io/hostname: confluence.rayhli.com
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http    
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-1:264594923212:certificate/44e134d9-bb4c-4dce-918c-f26b0df80521
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  selector:
    app: confluence
  ports:
 # - name: https
 #   protocol: TCP
 #   port: 443
 #   targetPort: http
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: LoadBalancer
